# RTech

./: CMakeLists.txt  Doxyfile  main.c
.github/workflows/: main.yml
benchmark/: CMakeLists.txt
benchmark/src/: rtELogLongStrings_bench.c  rtELog_bench.c
buildscripts/: clang_withtests.py  configure_clang_exportcc.py
docs/: architecture.dox  design-philosophies.dox
scripts/: clang_notests.py
src/: CMakeLists.txt  main.c
src/game/: CMakeLists.txt  blockIDs.h
src/game/gameClasses/: CMakeLists.txt  camera.c  camera.h
src/game/gameClasses/camera/: CMakeLists.txt  camera.c  cameraStructDefinition.h
src/game/gameClasses/chunkManager/: CMakeLists.txt  chunkManager.c  chunkManager.h
src/game/renderObjects/: CMakeLists.txt  chunk.c  chunk.h  cube.h  vertex.h
src/game/shaders/: CMakeLists.txt  default.frag  default.vert
src/rTest/: rTest.h
src/rtEAlloc/: .rtEAlloc.c.swp  CMakeLists.txt  rtEAlloc.c  rtEAlloc.h
src/rtEErrorCodes/: rtEErrorCodes.h
src/rtELog/: CMakeLists.txt  rtELog.c  rtELog.h
src/rtEMath/: CMakeLists.txt  rtEM.c  rtEM.h  rtEMath.c  rtEMath.h
src/rtEMemoryManager/: .rtEMemoryManager.c.swp  CMakeLists.txt  rtEAllocatorProcs.h  rtEMemoryManager.c  rtEMemoryManager.h  rtEStackAllocator.c  rtEStackAllocator.h
src/rtEMemoryManager/macros/: rtEMMMacros.h
src/rtEMemoryManager/procs/: CMakeLists.txt  rtEMemoryManagerDefaultAllocProcs.c  rtEMemoryManagerHelperProcs.c  rtEMemoryManagerHelperProcs.h
src/rtEMemoryManager/structs/: rtEAllocatorProcs.h  rtEMemoryManagerStruct.h  rtEStackAllocatorStruct.h
src/rtERenderer/: CMakeLists.txt  rtER_VK_struct_definitions.h  rtERenderer.c  rtERenderer.h
src/rtERenderer/creation/: CMakeLists.txt  rtER_VK_infoCreation.c  rtER_VK_infoCreation.h  rtER_VK_objectCreation.c  rtER_VK_objectCreation.h  rtER_VK_readShaderSource.c  rtER_VK_readShaderSource.h
src/rtERenderer/debug/: checkValidationLayerSupport.c  checkValidationLayerSupport.h  debugCallback.c  debugCallback.h
src/rtERenderer/macros/: rtERendererVKMacros.h
src/rtERenderer/support/: CMakeLists.txt  checkInstanceExtensionSupport.c  checkInstanceExtensionSupport.h  rtER_VK_support.c  rtER_VK_support.h
src/rtERenderer/vulkan/: CMakeLists.txt  rtERenderer_VK_constants.h  rtERenderer_VulkanImpl.c  rtERenderer_VulkanImpl.h
src/rtERenderer/vulkan/creation/: CMakeLists.txt  rtER_VK_infoCreation.c  rtER_VK_objectCreation.c  rtER_VK_objectCreation.h  rtER_VK_readShaderSource.c
src/rtERenderer/vulkan/debug/: CMakeLists.txt  checkValidationLayerSupport.c  debugCallback.c
src/rtERenderer/vulkan/info/: CMakeLists.txt  getDebugMessengerCreateInfo.c  getDebugMessengerCreateInfo.h
src/rtERenderer/vulkan/support/: checkInstanceExtensionSupport.c
src/rtEW/: CMakeLists.txt  rtenginewindow.h  rtenginewindow_implwin32.c
src/rtEW/vulkan/: rtEW_VK_createSurface.h
src/windowing/: CMakeLists.txt  rtenginewindow.h  rtenginewindow_implwin32.c
test/: CMakeLists.txt
test/src/: rtELog_test.c  rtEM_test.c  rtEMath_test.c  rtEMemoryManager_test.c  rtEStackAllocator_test.c  rtEW_test.c
